Bug 86392 - EDITING: CRASH when try to find existing string on locked Layer
Summary: EDITING: CRASH when try to find existing string on locked Layer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha1
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0 target:4.5.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2014-11-17 13:32 UTC by Bugcruncher
Modified: 2014-11-21 21:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test kit with simple sample and error message (24.81 KB, multipart/x-zip)
2014-11-17 13:32 UTC, Bugcruncher
Details
bt with debug symbols (10.75 KB, text/plain)
2014-11-18 21:36 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bugcruncher 2014-11-17 13:32:25 UTC
Created attachment 109620 [details]
Test kit with simple sample and error message

Steps how to reproduce with Version: 4.4.0.0.alpha2+
Build ID: b021b5983c62e266b82d9f0c5c6d8d8900553827
TinderBox: Win-x86@39, Branch:master, Time: 2014-11-12_01:10:08:

1. Open attached Sample document "CrashSample0002.odg"
2. Info Find Bar type "Layer" 
3. [Enter] to start search
   Bug: Crash with message "Assertion Failed" (for details see screenshot)
        after [Cancel]

No crash after having unlocked Layer "Layout"
Comment 1 Julien Nabet 2014-11-18 21:36:38 UTC
Created attachment 109692 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.

(I don't reproduce this on a brand new file)
Comment 2 Commit Notification 2014-11-21 17:08:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e37e8f38d1f5c6bc427965dc535f1a64f0c8649c

Resolves: fdo#86392 the assert seems to just want the attrs to be sorted

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.