Resolves: fdo#86392 the assert seems to just want the attrs to be sorted

i.e. two at the same position is ok

assert added in

commit 8220b70fe2dc270188751950ac6d872320db1aa2
Date:   Sun Jul 27 00:21:50 2014 -0400
    bnc#467459 - fix editeng text search with expanded fields.

Change-Id: Ifc65f3301a7d505a7d2d13e5914f53cbe263fc1f
(cherry picked from commit e37e8f38d1f5c6bc427965dc535f1a64f0c8649c)
Reviewed-on: https://gerrit.libreoffice.org/13025
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>